WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142501
scroll-snap-points do not work very well with mechanical scroll wheel events
https://bugs.webkit.org/show_bug.cgi?id=142501
Summary
scroll-snap-points do not work very well with mechanical scroll wheel events
Brent Fulgham
Reported
2015-03-09 11:49:08 PDT
Although scroll-snap-points work nicely with momentum-capable gestures, older mechanical wheel (or roller ball) pointing devices do not seem to reliably trigger the snap animation. This needs to be corrected.
Attachments
Patch
(11.06 KB, patch)
2015-06-28 18:04 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-03-09 11:49:44 PDT
<
rdar://problem/20093511
>
Brent Fulgham
Comment 2
2015-03-09 12:09:42 PDT
The problem is that we trigger the animation on the "scroll end" phase, which we never receive for mechanical wheels. This is similar to the difficulty in scroll latching. We may need to create some kind of wheel event metric that trigger the animation event if a sufficient amount of time passes from the last wheel event.
Wenson Hsieh
Comment 3
2015-06-28 18:04:55 PDT
Created
attachment 255734
[details]
Patch
Brent Fulgham
Comment 4
2015-06-30 18:01:26 PDT
Comment on
attachment 255734
[details]
Patch I think this looks good. r=me.
WebKit Commit Bot
Comment 5
2015-06-30 18:52:13 PDT
Comment on
attachment 255734
[details]
Patch Clearing flags on attachment: 255734 Committed
r186160
: <
http://trac.webkit.org/changeset/186160
>
WebKit Commit Bot
Comment 6
2015-06-30 18:52:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug